--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  div(ng-app="calendarApp")
+  div(ng-app="calendarApp", ng-cloak)
 
     link(rel='stylesheet', href='/css/angular-bootstrap-calendar.min.css')
     link(rel='stylesheet', href='/css/angular-csp.css')
@@ -374,21 +374,21 @@ block content
         form.navbar-form(name="addRuleForm")
           label Rule Type
           | &nbsp;
-          select(ng-model="newRule.ruleType")
+          select.form-control(ng-model="newRule.ruleType")
             option(value="canView") Can View
             option(value="canViewBusy") Can View Busy
             option(value="canNotView") Cannot View
           br
           label User Group
           br
-          select(ng-model="userGroup", ng-options="group.name for group in userGroups")
+          select.form-control(ng-model="userGroup", ng-options="group.name for group in userGroups")
           | &nbsp;
           button.btn(ng-click="addUserGroupToRule()") Add User Group
           ul
             li(ng-repeat="displayGroup in userGroupDisplay") {{ displayGroup }}
           label User Email
           br
-          input(type="text", ng-model="userEmail", list="emails")
+          input.form-control(type="text", ng-model="userEmail", list="emails")
           | &nbsp;
           button.btn(ng-click="addUserEmailToRule()") Add User Email
           ul
@@ -401,7 +401,7 @@ block content
         h4#myModalLabel.modal-title Add Users with Modify to {{ selectedCalendar.name }}
       .modal-body
         form.navbar-form(name="addModUserForm")
-          input(type="text", ng-model="inputModUserEmail", list="emails")
+          input.form-control(type="text", ng-model="inputModUserEmail", list="emails")
           | &nbsp;
           button.btn(ng-click="addModUsertoList()") Add User
           ul
@@ -413,23 +413,53 @@ block content
         button.close(type='button', ng-click="cancel()") &times;
         h4.modal-title Find Free Times
       .modal-body
-          form.navbar-form(name="findFreeTimeForm")
-            label User Group
+          form.navbar-form(style="display: table;", name="findFreeTimeForm")
+            p(style="display: table-row;")
+              label(style="display: table-cell;") User Group
+              select.form-control(ng-model="userGroup", ng-options="group.name for group in userGroups")
+              | &nbsp;
+              button.btn(ng-click="addUserGroupToFreeRequest()") Add User Group
+              p(style="display: table-cell;")
+                ul
+                  li(ng-repeat="displayGroup in freeUserGroupDisplay") {{ displayGroup }}
+            p(style="display: table-row;")
+              label(style="display: table-cell;") User Email
+              input.form-control(type="text", ng-model="freeUserEmail", list="emails")
+              | &nbsp;
+              button.btn(ng-click="addFreeUserToList()") Add User
+              p(style="display: table-cell;")
+                ul
+                  li(ng-repeat="userEmail in freeTimeDetails.userIds") {{ userEmail }}
+            p(style="display: table-row;")
+              p(style="display: table-cell;")
+                label Recurring
+                | &nbsp;
+                input(type="checkbox", ng-model="isRecurring")
+              input.form-control(type="text", ng-show="isRecurring", ng-model="freeTimeDetails.recurrence", placeholder="# weeks to repeat")
+              br
+            p(style="display: table-row;")
+              label(style="display: table-cell;") Time Slot Size
+              | &nbsp;
+              input.form-control(type="text", ng-model="freeTimeDetails.slotSize", placeholder="Size in minutes", required)
             br
-            select(ng-model="userGroup", ng-options="group.name for group in userGroups")
-            | &nbsp;
-            button.btn(ng-click="addUserGroupToFreeRequest()") Add User Group
-            ul
-              li(ng-repeat="displayGroup in freeUserGroupDisplay") {{ displayGroup }}
-            label User Email
+            p(style="display: table-row;")
+              label(style="display: table-cell;") Time Slot Start
+              | &nbsp;
+              input.form-control(type="datetime-local", ng-model="timeSlotStart", placeholder="yyyy-MM-ddTHH:mm", min="2015-01-01T00:00" max="2050-12-31T00:00")
             br
-            input(type="text", ng-model="freeUserEmail", list="emails")
-            | &nbsp;
-            button.btn(ng-click="addFreeUserToList()") Add User
-            ul
-              li(ng-repeat="userEmail in freeTimeDetails.userIds") {{ userEmail }}
-
-            button.btn.btn-primary(ng-disabled="findFreeTimeForm.$invalid", ng-click="findFreeTimes()") Find Free Times
+            p(style="display: table-row;")
+              label(style="display: table-cell;") Time Slot End
+              | &nbsp;
+              input.form-control(type="datetime-local", ng-model="timeSlotEnd", placeholder="yyyy-MM-ddTHH:mm", min="2015-01-01T00:00" max="2050-12-31T00:00")
+              | &nbsp;
+              button.btn.btn-primary(ng-click="addTimeSlot()") Add Time Slot
+            p(style="display: table-row;")
+              p(style="display: table-cell;")
+                ul
+                  li(ng-repeat="slot in freeTimeDetails.timeSlot") {{ convertDates(slot.startTime, slot.endTime) }}
+            br
+            p(style="display:table-row;")
+              button.btn.btn-primary(ng-disabled="findFreeTimeForm.$invalid", ng-click="findFreeTimes()") Find Free Times
           
 
     script(type="text/ng-template" id="createPudModal.html")
