Minor wording change for maximum slot sign-up time.

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -519,7 +519,7 @@ block content
           p(style="display: table-row;")
             label(style="display: table-cell;") Sign-up Maximum Slot Time
             | &nbsp;
-            input.form-control(style="display: table-cell;", type="text", placeholder="in minutes & multiple of minimum", ng-model="ssuDetails.evMaxDuration", ng-pattern="/^[0-9]*.?[0-9]*$/", required)
+            input.form-control(style="display: table-cell;", type="text", placeholder="multiple of minimum", ng-model="ssuDetails.evMaxDuration", ng-pattern="/^[0-9]*.?[0-9]*$/", required)
           br
           p(style="display: table-row;")
             label(style="display: table-cell;") Max Sign-ups per User
